--- a/CustomerInvoice WebApp/appsettings.json
+++ b/CustomerInvoice WebApp/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CustomerInvoiceWebApp;Trusted_Connection=True;"
+  },
+  "Pagination": {
+    "MaxPageSize": 50,
+    "MinPageSize": 10,
+    "MaxPageNumber": 100
   }
 }
